<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_horizontal_margin"
                tools:context=".MainActivity">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_title"
            android:id="@+id/label_title"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:textStyle="bold" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/label_author"
            android:id="@+id/label_author"
            android:layout_alignTop="@+id/label_rate"
            android:layout_alignParentStart="true"
            android:layout_marginTop="5dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_rate"
            android:id="@+id/label_rate"
            android:textStyle="bold"
            android:layout_below="@+id/label_title"
            android:layout_alignParentEnd="false" android:layout_marginLeft="300dp"
            />

</RelativeLayout>
