<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Título"
        android:id="@+id/lblTitulo"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtTitulo"
        android:layout_below="@+id/lblTitulo"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_author"
        android:id="@+id/lblData"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/txtTitulo" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/txtData"
        android:layout_below="@+id/lblData"
        android:layout_centerHorizontal="true" android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/label_status"
        android:id="@+id/lblDescricao"
        android:layout_above="@+id/radio_group"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button_text"
        android:id="@+id/btnSalvar"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="salvar" />
    <RadioGroup
            android:layout_width="200dp"
            android:layout_height="150dp"
            android:id="@+id/radio_group"
            android:layout_above="@+id/btnSalvar"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/btnSalvar"
            android:layout_marginTop="8dp">
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Yo Quiero"
                android:id="@+id/radio_want" android:textSize="@dimen/text_size_radios"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Estoy Leyendo"
                android:id="@+id/radio_already"
                android:textSize="@dimen/text_size_radios"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="He Leído"
                android:id="@+id/radio_done"
                android:textSize="@dimen/text_size_radios"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Abandonado"
                android:id="@+id/radio_quit"
                android:textSize="@dimen/text_size_radios"/>
    </RadioGroup>
    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textAppearance="?android:attr/textAppearanceLarge"
              android:text="@string/label_rate" android:id="@+id/label_rate"
              android:layout_below="@+id/txtData"
              android:layout_alignParentStart="true"/>
    <EditText android:layout_width="@dimen/rate_dimension"
              android:layout_height="wrap_content"
              android:ems="10" android:id="@+id/text_rate"
              android:layout_below="@+id/label_rate"
              android:layout_alignParentStart="true"
              android:inputType="number"/>

</RelativeLayout>
